# CGPA-Calculator

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
CGPA/: classs.h  main.cpp
